# LabJobOS

./: ActionWindow.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CObject.cpp  CObject.h  Event.h  Figure.h  LabJob2.vcxproj  LabJob2.vcxproj.filters  Point.h  Window.cpp  Window.h  main.cpp
Debug/: LabJob2.exe.recipe  vc141.idb  vc142.idb
Debug/LabJob2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LabJob2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
